--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
+spring.application.name=spring-boot-scheduler
+
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot_test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
